1.Added go top button - 2.Fixed footer icons

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                 <p>I’m always open to discuss new projects, creative ideas or opportunities to be a part of your vision.</p>
             </div>
 
-            <span class="my-mail"><i class="iconify-inline accent-primary" data-icon="fa6-solid:envelope"></i> aleprovvi@yahoo.it</span>
+            <span class="my-mail"><i class="iconify-inline envelope accent-primary" data-icon="fa6-solid:envelope"></i>alessandro.provvisionato@hotmail.com</span>
 
             <form action="https://formsubmit.co/alessandro.provvisionato@hotmail.com" method="POST" class="contact-form">
                 <input type="hidden" name="_subject" value="New message from portfolio!">
@@ -372,18 +372,21 @@
                     </label>
                 </div>
 
-                <button class="btn-primary btn-big" type="submit">Send <i class="iconify-inline" data-icon="fa6-solid:paper-plane"></i></button>
+                <button class="btn-primary btn-big" type="submit">Send <i class="iconify-inline paper-plane" data-icon="fa6-solid:paper-plane"></i></button>
             </form>
 
         </section>
+
+        <button id="top-btn" title="Go to top"><span class="iconify-inline" data-icon="bytesize:chevron-top"></span></button>
     </div>
+
 
     <footer class="footer">
         <div class="footer__container">
             <span class="made-by">Made by Alessandro Provvisionato</span>
             <div class="social-icons">
-                <a href="https://codepen.io/athryell" target="_blank"><i class="fab fa-codepen"></i></a>
-                <a href="https://github.com/Athryell" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://codepen.io/athryell" target="_blank"><i class="iconify-inline" data-icon="cib:codepen"></i></a>
+                <a href="https://github.com/Athryell" target="_blank"><i class="iconify-inline" data-icon="cib:github"></i></a>
             </div>
         </div>
     </footer>
