Test for a better redirect after sending mail

--- a/index.html
+++ b/index.html
@@ -346,6 +346,7 @@
 
             <form action="https://formsubmit.co/alessandro.provvisionato@hotmail.com" method="POST" class="contact-form">
                 <input type="hidden" name="_subject" value="New message from portfolio!">
+                <input type="hidden" name="_next" value="https://alepro.netlify.com">
 
                 <div class="contact__input-container">
                     <input type="text" id="name" name="name" class="contact__input" autocomplete="off" placeholder=" " required>
