--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                         </div>
 
                         <div class="card__links">
-                            <a class="btn-primary btn-small" href="https://www.youtube.com/watch?v=kDhFoDyLHao" target="_blank">Check it out</a>
+                            <a class="btn-primary btn-small" href="https://brainandbody.herokuapp.com/" target="_blank">Check it out</a>
                             <a class="btn-secondary btn-small" target="_blank" href="https://github.com/Athryell/brain-and-body.git">Github</a>
                         </div>
                     </div>
