Fixed Firefox layout problems

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <h1 class="section__title title-separator" id="about_title">Who am I</h1>
 
             <div class="about__toggle-container">
-                <legend class="about__legend"><small class="test">Adjust bio length</small></legend>
+                <legend class="about__legend"><small>Adjust bio length</small></legend>
                 <div class="toggler toggler__about">
                     <label class="about__label">
                         <small>Short</small>
