--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/iconify/2.2.1/iconify.min.js" integrity="sha512-sU5Gzc108d8ERAXEUoNh3DZQ3GZCQyygVkeuhIxFR+D9Go8kLw3Ce3HVD/AI5cnhGzW7Km9V4oOOiepKcD0vlg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 <body>
-    <header class="header">
+    <header class="header" id="header">
         
         <a class="skip-nav-link" href="#main-content">
             Skip navigation
@@ -382,7 +382,7 @@
             </form>
         </section>
 
-        <button id="top-btn" title="Go to top"><span class="iconify-inline" data-icon="bytesize:chevron-top"></span></button>
+        <a id="top-btn" title="Go to top" href="#header"><span class="iconify-inline" data-icon="bytesize:chevron-top"></span></a>
     </main>
 
     <footer class="footer">
