--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                         </div>
                             
                         <div class="card__links">
-                            <a class="btn-primary btn-small tooltip-video" href="https://www.youtube.com/watch?v=gpOiC_vCS90" target="_blank">Video review</a>
+                            <a class="btn-primary btn-small tooltip-video" href="https://www.youtube.com/watch?v=gpOiC_vCS90" target="_blank">Video</a>
                             <a class="btn-secondary btn-small" target="_blank" href="https://github.com/Athryell/project-ecommerce">Github</a>
                         </div>
                     </div>
@@ -264,7 +264,7 @@
                         </div>
 
                         <div class="card__links">
-                            <a class="btn-primary btn-small tooltip-video" href="https://www.youtube.com/watch?v=Tx5CAg_0D-M" target="_blank">Video review</a>
+                            <a class="btn-primary btn-small tooltip-video" href="https://www.youtube.com/watch?v=Tx5CAg_0D-M" target="_blank">Video</a>
                             <a class="btn-secondary btn-small" target="_blank" href="https://github.com/Athryell/project-mail.git">Github</a>
                         </div>
                     </div>
@@ -280,7 +280,7 @@
                         </div>
 
                         <div class="card__links">
-                            <a class="btn-primary btn-small tooltip-video" href="https://www.youtube.com/watch?v=ykujKn69dFo" target="_blank">Video review</a>
+                            <a class="btn-primary btn-small tooltip-video" href="https://www.youtube.com/watch?v=ykujKn69dFo" target="_blank">Video</a>
                             <a class="btn-secondary btn-small" target="_blank" href="https://github.com/Athryell/project-social.git">Github</a>
                         </div>
                     </div>
