Removed annoying link in services section

--- a/index.html
+++ b/index.html
@@ -119,13 +119,8 @@
                             
                         </p>
                         <p>
-                            <a href="https://github.com/Athryell" target="_blank">
-                                <span class="tooltip-wrapper" data-tooltip="Github"><i class="iconify bg-light" data-icon="cib:github"></i></span>
-                            </a>
-                            <a href="https://codepen.io/athryell">
-                                <span class="tooltip-wrapper" data-tooltip="Codepen"><i class="iconify-inline" data-icon="cib:codepen"></i>
-                                </span>
-                            </a>
+                            <span class="tooltip-wrapper" data-tooltip="Github"><i class="iconify bg-light" data-icon="cib:github"></i></span>
+                            <span class="tooltip-wrapper" data-tooltip="Codepen"><i class="iconify-inline" data-icon="cib:codepen"></i></span>
                         </p>
                         <p>
                             <span class="tooltip-wrapper" data-tooltip="C-sharp"><i class="iconify" data-icon="logos:c-sharp"></i></span>
