Better aligment send btn icon

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                     </label>
                 </div>
 
-                <button class="btn-primary btn-big" type="submit">Send <i class="iconify-inline paper-plane" data-icon="fa6-solid:paper-plane"></i></button>
+                <button class="btn-primary btn-big" type="submit">Send <i class="iconify paper-plane" data-icon="fa6-solid:paper-plane"></i></button>
             </form>
         </section>
 
