Images optimization: reduced size and added webp as default, added lazy loading

--- a/index.html
+++ b/index.html
@@ -213,7 +213,14 @@
             
             <div class="card-container">
                 <div class="card"> <!-- Happy Dungeon -->
-                    <img class="card__img" src="./img/happydungeon_placeholder.jpg" alt="homepage of happydungeon.quest website">
+
+                    <picture>
+                        <source type="image/webp" srcset="./img/happydungeon_tn.webp">
+                        <source type="image/jpeg" srcset="./img/happydungeon_tn.jpg">
+                        <img loading="lazy" class="card__img" src="./img/happydungeon_tn.jpg" alt="homepage of happydungeon.quest website">
+                    </picture>
+
+
                     <div class="card__inner">
                         <h2 class="card__title">My boardgame website</h2>
                         <div class="card__text">
@@ -230,7 +237,12 @@
                 </div>
 
                 <div class="card" id="ecommerce"> <!-- E commerce -->
-                    <img class="card__img" src="./img/ecommerce_placeholder.jpg" alt="homepage of ecommerce website">
+                    <picture>
+                        <source type="image/webp" srcset="./img/ecommerce_tn.webp">
+                        <source type="image/jpeg" srcset="./img/ecommerce_tn.jpg">
+                        <img loading="lazy" class="card__img" src="./img/ecommerce_tn.jpg" alt="homepage of ecommerce project website">
+                    </picture>
+
                     <div class="card__inner">
                         <h2 class="card__title">Ecommerce clone</h2>
                         <div class="card__text">
@@ -250,7 +262,12 @@
                 </div>
 
                 <div class="card"> <!--  Mail -->
-                    <img class="card__img" src="./img/mail_placeholder.jpg" alt="homepage of happydungeon.quest website">
+                    <picture>
+                        <source type="image/webp" srcset="./img/mail_tn.webp">
+                        <source type="image/jpeg" srcset="./img/mail_tn.jpg">
+                        <img loading="lazy" class="card__img" src="./img/mail_tn.jpg" alt="homepage of mail project website">
+                    </picture>
+
                     <div class="card__inner">
                         <h2 class="card__title">Mail service clone</h2>
                         <div class="card__text">
@@ -265,8 +282,13 @@
                     </div>
                 </div>
 
-                <div class="card"> <!-- Social -->
-                    <img class="card__img" src="./img/social_placeholder.jpg" alt="homepage of happydungeon.quest website">
+                <div loading="lazy" class="card"> <!-- Social -->
+                    <picture>
+                        <source type="image/webp" srcset="./img/social_tn.webp">
+                        <source type="image/jpeg" srcset="./img/social_tn.jpg">
+                        <img loading="lazy" class="card__img" src="./img/social_tn.jpg" alt="homepage of social project website">
+                    </picture>
+
                     <div class="card__inner">
                         <h2 class="card__title">Social network clone</h2>
                         <div class="card__text">
@@ -282,7 +304,12 @@
                 </div>
 
                 <div class="card"> <!-- Portfolio -->
-                    <img class="card__img" src="./img/portfolio_placeholder.jpg" alt="homepage of this portfolio">
+                    <picture>
+                        <source type="image/webp" srcset="./img/portfolio_tn.webp">
+                        <source type="image/jpeg" srcset="./img/portfolio_tn.jpg">
+                        <img loading="lazy" class="card__img" src="./img/portfolio_tn.jpg" alt="homepage of this portfolio">
+                    </picture>
+
                     <div class="card__inner">
                         <h2 class="card__title">My portfolio</h2>
                         <div class="card__text">
@@ -297,11 +324,16 @@
                 </div>
 
                 <div class="card"> <!-- Brain and body -->
-                    <img class="card__img" src="./img/brainandbody_placeholder.jpg" alt="homepage brain and body website">
+                    <picture>
+                        <source type="image/webp" srcset="./img/brainandbody_tn.webp">
+                        <source type="image/jpeg" srcset="./img/brainandbody_tn.jpg">
+                        <img loading="lazy" class="card__img" src="./img/brainandbody_tn.jpg" alt="homepage of brain and body website">>
+                    </picture>
+
                     <div class="card__inner">
                         <h2 class="card__title">Brain and body</h2>
                         <div class="card__text">
-                            <p>This was the final project for the CS50's course I talked <a class="link" href="#ecommerce">before</a>.</p>
+                            <p>This was the final project for the CS50's course I talked in the <a class="link" href="#ecommerce">e-commerce clone</a>.</p>
                             In this project you can try some challenges for you mind and build some workouts to train your body (it's a playful app, not a medical one), the results will be stored in the user personal database but added to a global one which stores statistic for each country.
                         </div>
 
@@ -313,7 +345,12 @@
                 </div>
 
                 <div class="card"> <!-- React -->
-                    <img class="card__img" src="./img/react_placeholder.jpg" alt="blurry picture">
+                    <picture>
+                        <source type="image/webp" srcset="./img/react_tn.webp">
+                        <source type="image/jpeg" srcset="./img/react_tn.jpg">
+                        <img loading="lazy" class="card__img" src="./img/react_tn.jpg" alt="red curtain closed">
+                    </picture>
+
                     <div class="card__inner">
                         <h2 class="card__title">React Project</h2>
                         <div class="card__text">
