Polish mail img

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                     <picture>
                         <source type="image/webp" srcset="./img/brainandbody_tn.webp">
                         <source type="image/jpeg" srcset="./img/brainandbody_tn.jpg">
-                        <img loading="lazy" class="card__img" src="./img/brainandbody_tn.jpg" alt="homepage of brain and body website">>
+                        <img loading="lazy" class="card__img" src="./img/brainandbody_tn.jpg" alt="homepage of brain and body website">
                     </picture>
 
                     <div class="card__inner">
