Font: changed from import to link

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hi there! I'm Alex, a junior full-stack web developer. I might be the one you are looking for so why not taking a look at my portfolio? See you there!">
     <title>Alessandro Provvisionato's portfolio</title>
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+    
     <link rel="icon" type="image/x-icon" href="/img/favicon.png">
     <link rel="stylesheet" href="css/main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/iconify/2.2.1/iconify.min.js" integrity="sha512-sU5Gzc108d8ERAXEUoNh3DZQ3GZCQyygVkeuhIxFR+D9Go8kLw3Ce3HVD/AI5cnhGzW7Km9V4oOOiepKcD0vlg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -103,7 +109,7 @@
                         <p>
                             <span class="tooltip-wrapper" data-tooltip="Django"><i class="iconify" data-icon="logos:django-icon"></i></span>
                             <span class="tooltip-wrapper" data-tooltip="Python"><i class="iconify" data-icon="logos:python"></i></span>
-                            <span class="tooltip-wrapper" data-tooltip="AWS"><i class="iconify bg-light" data-icon="logos:aws"></i></span>
+                            <!-- <span class="tooltip-wrapper" data-tooltip="AWS"><i class="iconify bg-light" data-icon="logos:aws"></i></span> -->
                         </p>
                     </div>
                 </article>
