Performances: reduced CLS and load

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <title>Alessandro Provvisionato's portfolio</title>
 
     <!-- Fonts -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preload" href=""https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" as="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
-     -->
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
+    
+
     <link rel="icon" type="image/x-icon" href="/img/favicon.png">
     <link rel="stylesheet" href="css/main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/iconify/2.2.1/iconify.min.js" integrity="sha512-sU5Gzc108d8ERAXEUoNh3DZQ3GZCQyygVkeuhIxFR+D9Go8kLw3Ce3HVD/AI5cnhGzW7Km9V4oOOiepKcD0vlg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -145,12 +148,14 @@
                     <p>Library: React</p>
                     <p>UX: Accessibility (super important)</p>
                     <p>Visual editor: Webflow</p>
+                    <p>Optimization and performances</p>
                 </div>
                 <div class="services__icons" hidden>
                     <p>
                         <span class="tooltip-wrapper" data-tooltip="React"><i class="iconify" data-icon="logos:react"></i></span>
                         <span class="tooltip-wrapper" data-tooltip="Accessibility"><i class="iconify" data-icon="iconoir:accessibility"></i></span>
                         <span class="tooltip-wrapper" data-tooltip="Webflow"><i class="iconify" data-icon="simple-icons:webflow"></i></span>
+                        <span class="tooltip-wrapper" data-tooltip="Performances"><i class="iconify-inline" data-icon="material-symbols:speed-rounded"></i></span>
                     </p>
                 </div>
             </article>
@@ -225,7 +230,7 @@
                     <picture>
                         <source type="image/webp" srcset="./img/happydungeon_tn.webp">
                         <source type="image/jpeg" srcset="./img/happydungeon_tn.jpg">
-                        <img loading="lazy" class="card__img" src="./img/happydungeon_tn.jpg" alt="homepage of happydungeon.quest website">
+                        <img loading="lazy" width="640" height="360" class="card__img" src="./img/happydungeon_tn.jpg" alt="homepage of happydungeon.quest website">
                     </picture>
 
 
@@ -248,7 +253,7 @@
                     <picture>
                         <source type="image/webp" srcset="./img/ecommerce_tn.webp">
                         <source type="image/jpeg" srcset="./img/ecommerce_tn.jpg">
-                        <img loading="lazy" class="card__img" src="./img/ecommerce_tn.jpg" alt="homepage of ecommerce project website">
+                        <img loading="lazy" width="640" height="360" class="card__img" src="./img/ecommerce_tn.jpg" alt="homepage of ecommerce project website">
                     </picture>
 
                     <div class="card__inner">
@@ -273,7 +278,7 @@
                     <picture>
                         <source type="image/webp" srcset="./img/mail_tn.webp">
                         <source type="image/jpeg" srcset="./img/mail_tn.jpg">
-                        <img loading="lazy" class="card__img" src="./img/mail_tn.jpg" alt="homepage of mail project website">
+                        <img loading="lazy" width="640" height="360" class="card__img" src="./img/mail_tn.jpg" alt="homepage of mail project website">
                     </picture>
 
                     <div class="card__inner">
@@ -294,7 +299,7 @@
                     <picture>
                         <source type="image/webp" srcset="./img/social_tn.webp">
                         <source type="image/jpeg" srcset="./img/social_tn.jpg">
-                        <img loading="lazy" class="card__img" src="./img/social_tn.jpg" alt="homepage of social project website">
+                        <img loading="lazy" width="640" height="360" class="card__img" src="./img/social_tn.jpg" alt="homepage of social project website">
                     </picture>
 
                     <div class="card__inner">
@@ -315,7 +320,7 @@
                     <picture>
                         <source type="image/webp" srcset="./img/portfolio_tn.webp">
                         <source type="image/jpeg" srcset="./img/portfolio_tn.jpg">
-                        <img loading="lazy" class="card__img" src="./img/portfolio_tn.jpg" alt="homepage of this portfolio">
+                        <img loading="lazy" width="640" height="360" class="card__img" src="./img/portfolio_tn.jpg" alt="homepage of this portfolio">
                     </picture>
 
                     <div class="card__inner">
@@ -335,7 +340,7 @@
                     <picture>
                         <source type="image/webp" srcset="./img/brainandbody_tn.webp">
                         <source type="image/jpeg" srcset="./img/brainandbody_tn.jpg">
-                        <img loading="lazy" class="card__img" src="./img/brainandbody_tn.jpg" alt="homepage of brain and body website">
+                        <img loading="lazy" width="640" height="360" class="card__img" src="./img/brainandbody_tn.jpg" alt="homepage of brain and body website">
                     </picture>
 
                     <div class="card__inner">
@@ -356,7 +361,7 @@
                     <picture>
                         <source type="image/webp" srcset="./img/react_tn.webp">
                         <source type="image/jpeg" srcset="./img/react_tn.jpg">
-                        <img loading="lazy" class="card__img" src="./img/react_tn.jpg" alt="red curtain closed">
+                        <img loading="lazy" width="640" height="360" class="card__img" src="./img/react_tn.jpg" alt="red curtain closed">
                     </picture>
 
                     <div class="card__inner">
