Update all projects with links

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                         </div>
 
                         <div class="card__links">
-                            <a class="btn-primary btn-small tooltip-video" href="https://www.youtube.com/watch?v=ykujKn69dFo" target="_blank">Video</a>
+                            <a class="btn-primary btn-small" href="https://alepro-network.herokuapp.com/" target="_blank">Check it out</a>
                             <a class="btn-secondary btn-small" target="_blank" href="https://github.com/Athryell/project-social.git">Github</a>
                         </div>
                     </div>
